Fix layout issues

--- a/src/components/CardGrid/CardGrid.module.scss
+++ b/src/components/CardGrid/CardGrid.module.scss
@@ -6,21 +6,37 @@ $ns: 'cards';
     &_container {
         background-color: $off-white;
         justify-content: center;
+        align-items: center;
         display: flex;
+        width: 100%
         }
         
         &_wrapper {
             @include max-screen-sizes;
-            
-            display: grid;
-            gap: 4rem 4rem;
-            grid-template-columns: repeat(2, 1fr);
-            grid-auto-flow: dense;
-            padding: 7rem 0 7rem 0;
+            @include media(">=tablet") { 
+                display: grid;
+                gap: 4rem 4rem;
+                grid-template-columns: repeat(2, 1fr);
+                grid-auto-flow: dense;
+                padding: 7rem 0;
+                
+            }
+
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            padding: 1rem;
+            margin-bottom: get-rem(32px);
+            max-width: 100%;
     }
     
     &_title {
-        font-size: 5rem;
+        @include media(">=tablet") {
+            font-size: 5rem;
+        }
+        
         grid-column: 1 / 2;
     }
 }
