--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,8 +1,13 @@
 @import '../../sass/build';
 
 .navigation {
+    // @include max-screen-sizes;
+    @include media(">=tablet") {
+        padding-top: 5rem;
+    }
+
+    padding-top: 2rem;
     width: 100%;
-    padding-top: 5rem;
 }
 
 .navbar {
@@ -10,12 +15,18 @@
     @include mx-auto;
     
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
 }
 
 .navigation_links {
+    @include media("<tablet") {
+        flex-direction: column;
+    }
+    
     align-self: center;
+    display: flex;
 }
 
 .navlink {
